[FIX] Fixed the CSS as visibility made things go crazy
Duplicated <body> tag kinda crazy!

--- a/src/style.scss
+++ b/src/style.scss
@@ -924,10 +924,10 @@ body { height:100vh; }
 
 
 /* ENV Specific */
-.debug{ visibility: hidden; }
+.debug{ display: none; }
 .env_development{
-    .debug{ visibility: visible; }
+    .debug{ display: auto; }
 }
 .env_production{
-    .debug{ visibility: hidden; }
+    .debug{ display: none; }
 }
